removed RepoName and Tag